added aditional folders to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,14 @@
 
 *.build
 
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+/vendor/
